[package]
name = "cleverbot_io"
version = "1.0.0"
authors = ["Eli Clemente Gordillo Foster <elifosterwy@gmail.com>"]
documentation = "https://docs.cleverbot.io/docs/getting-started-with-rust"
homepage = "https://cleverbot.io/"
description = "A Rust interface for the cleverbot.io API"
repository = "https://github.com/CleverbotIO/rust-cleverbot.io"
keywords = ["cleverbot", "api", "AI"]
readme = "README.md"
license = "MIT"

[dependencies]
hyper = "0.7.2"
url = "0.5.5"
serde = "0.7.0"
serde_json = "0.7.0"
